--- a/Source/Tailwind.Traders.Web/ClientApp/public/index.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tailwind Traders</title>
+    <title>美家————给你美丽的家</title>
   </head>
   <body>
     <noscript>
