--- a/Source/Tailwind.Traders.Web/ClientApp/public/CustomService.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/CustomService.html
@@ -13,13 +13,13 @@
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">美家<small class="ml-2 small" style="font-size: 17px;">&nbsp;&gt;定制化服务</small></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="meijia">美家<small class="ml-2 small" style="font-size: 17px;">&nbsp;&gt;定制化服务</small></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">首页</a></li>
-                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">定制化服务</a></li>
-                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">花饰/周边商城</a></li>
+                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#meijia.html">首页</a></li>
+                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#">定制化服务</a></li>
+                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="meijia.html">花饰/周边商城</a></li>
                 </ul>
             </div>
         </div>
@@ -31,22 +31,22 @@
             <div class="row">
                 <div class="col">
                     <figure class="figure"><img class="img-fluid figure-img" src="assets/img/portfolio/cabin.png">
-                        <figcaption class="figure-caption text-center" style="font-size: 30px;">居家日常</figcaption>
+                        <figcaption class="figure-caption text-center" style="font-size: 26px;">居家日常</figcaption>
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="figure"><img class="img-fluid figure-img" src="assets/img/portfolio/cabin.png">
-                        <figcaption class="figure-caption text-center" style="font-size: 30px;">生日派对</figcaption>
+                        <figcaption class="figure-caption text-center" style="font-size: 26px;">生日派对</figcaption>
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="figure"><img class="img-fluid figure-img" src="assets/img/portfolio/cabin.png">
-                        <figcaption class="figure-caption text-center" style="font-size: 30px;">女神节</figcaption>
+                        <figcaption class="figure-caption text-center" style="font-size: 26px;">女神节</figcaption>
                     </figure>
                 </div>
                 <div class="col">
                     <figure class="figure"><img class="img-fluid figure-img" src="assets/img/portfolio/cabin.png">
-                        <figcaption class="figure-caption text-center" style="font-size: 30px;">圣诞节</figcaption>
+                        <figcaption class="figure-caption text-center" style="font-size: 26px;">圣诞节</figcaption>
                     </figure>
                 </div>
             </div>
