--- a/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
@@ -24,38 +24,38 @@
             </div>
         </div>
     </nav>
-    <header class="masthead bg-primary text-white text-center">
-        <div class="container"><img class="img-fluid d-block mx-auto mb-5" src="assets/img/portfolio/cabin.png">
-            <h1>要美家，上美家</h1>
+    <header class="bg-primary text-white text-center masthead" style="padding-top: 120px;">
+        <div class="container p-2"><img class="img-fluid mx-auto mb-5 col col-xl-4" src="assets/img/portfolio/cabin.png">
+            <h1 class="small">要美家，上美家</h1>
             <hr class="star-light">
             <h2 class="font-weight-light mb-0">个性化家居花饰服务提供商</h2>
         </div>
     </header>
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio" style="padding-top: 40px;padding-bottom: 40px;">
         <div class="container">
             <h2 class="text-uppercase text-center text-secondary">核心服务</h2>
             <hr class="star-dark mb-5">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cabin.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="/"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cabin.png" alt="Card Image"></a>
                         <div class="card-body">
-                            <h6><a href="#">会员订阅/增值服务</a></h6>
+                            <h6><a href="/">会员订阅/增值服务</a></h6>
                             <p class="text-muted card-text">会员订阅/增值服务</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cake.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="CustomService.html"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cake.png" alt="Card Image"></a>
                         <div class="card-body">
-                            <h6><a href="#">个性化家具花饰定制服务</a></h6>
+                            <h6><a href="CustomService.html">个性化家具花饰定制服务</a></h6>
                             <p class="text-muted card-text">个性化家具花饰定制服务</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/circus.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="/list/homeappliances"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/circus.png" alt="Card Image"></a>
                         <div class="card-body">
-                            <h6><a href="#">花饰/周边商城</a></h6>
+                            <h6><a href="/list/homeappliances">花饰/周边商城</a></h6>
                             <p class="text-muted card-text">花饰/周边商城</p>
                         </div>
                     </div>
@@ -63,16 +63,16 @@
             </div>
         </div>
     </section>
-    <section id="about" class="bg-primary text-white mb-0">
+    <section id="about" class="bg-primary text-white mb-0 p-0 pt-5 pb-4">
         <div class="container">
             <h2 class="text-uppercase text-center text-white">关于我们</h2>
             <hr class="star-light mb-5">
             <div class="row">
                 <div class="col-lg-4 ml-auto">
-                    <p class="lead">家居花饰定制解决方案</p>
+                    <p class="lead text-center">家居花饰定制解决方案</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">花饰/周边商城</p>
+                    <p class="lead text-center">花饰/周边商城</p>
                 </div>
             </div>
             <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" href="#"><i class="fa fa-check mr-2"></i><span>我要订阅VIP</span></a></div>
@@ -98,7 +98,7 @@
                             <div class="form-group floating-label-form-group controls mb-5 pb-2"><textarea class="form-control" id="message" required="" placeholder="Message" rows="5"></textarea><small class="form-text text-danger help-block"></small></div>
                         </div>
                         <div id="success"></div>
-                        <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">发送</button></div>
+                        <div class="text-center form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">发送</button></div>
                     </form>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                     <p>2215 John Daniel Drive<br>Clark, MO 65243</p>
                 </div>
                 <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase">Around the Web</h4>
+                    <h4 class="text-uppercase">分享</h4>
                     <ul class="list-inline">
                         <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-weixin fa-fw"></i></a></li>
                         <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-qq fa-fw"></i></a></li>
@@ -121,14 +121,14 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="text-uppercase mb-4">设计师入住</h4>
+                    <h4 class="text-uppercase mb-4">设计师入驻</h4>
                     <p class="lead mb-0"><span>欢迎加入我们</span></p>
                 </div>
             </div>
         </div>
     </footer>
     <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright ©&nbsp;Brand 2018</small></div>
+        <div class="container"><small>Copyright © 美家 2019</small></div>
     </div>
     <div class="d-lg-none scroll-to-top position-fixed rounded"><a class="d-block js-scroll-trigger text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
     <div class="modal text-center" role="dialog" tabindex="-1" id="portfolio-modal-1">
