--- a/Source/Tailwind.Traders.Web/ClientApp/public/CustomService.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/CustomService.html
@@ -25,8 +25,8 @@
         </div>
     </nav>
     <section id="portfolio" class="portfolio pb-4">
-        <div class="container mt-0">
-            <h2 class="text-uppercase text-center text-secondary">主题</h2>
+        <div class="container">
+            <h2 class="text-uppercase text-center text-secondary mt-5">主题</h2>
             <hr class="star-dark mb-4">
             <div class="row pl-2 pr-2">
                 <div class="col p-0">
@@ -86,8 +86,7 @@
                             <div class="progress progress-sm mb-3">
                                 <div class="progress-bar bg-info" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
                             </div>
-                            <h4 class="text-center font-weight-bold mt-4">个人介绍</h4>
-                            <ul class="pl-4 overflow-hidden no-wrap">
+                            <ul class="pl-4 overflow-hidden no-wrap small">
                                 <li>毕业于法国Catherine Muller School ,曾服务过Dior/科颜氏/fresh</li>
                                 <li>2019年 获“美国花艺学院AFA”花艺师/花艺讲师资质</li>
                                 <li>2014年 至今担任多彩国际花艺学院讲师</li>
@@ -101,7 +100,7 @@
                         <div class="col">
                             <div class="card"><img class="rounded img-fluid card-img-top w-100 d-block p-4" src="assets/img/17d4cd64185b45eb829bbec6b71c987b.gif" style="padding-bottom: 0px;">
                                 <div class="card-body text-center p-2">
-                                    <p class="card-text">他的花艺风格融合着北欧和日本独特、感性设计，与一般花艺有着极大差异。从花卉植物品种到陈列摆设，以及色调掌控、空间材质等都跳脱了亚洲思维。所以尽管他是纯正的丹麦人，却被誉为花艺混血小王子<br></p>
+                                    <p class="card-text small">他的花艺风格融合着北欧和日本独特、感性设计，与一般花艺有着极大差异。从花卉植物品种到陈列摆设，以及色调掌控、空间材质等都跳脱了亚洲思维。所以尽管他是纯正的丹麦人，却被誉为花艺混血小王子<br></p>
                                 </div>
                             </div>
                         </div>
@@ -138,8 +137,7 @@
                             <div class="progress progress-sm mb-3">
                                 <div class="progress-bar bg-info" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
                             </div>
-                            <h4 class="text-center font-weight-bold mt-4">个人介绍</h4>
-                            <ul class="pl-4 overflow-hidden no-wrap">
+                            <ul class="pl-4 overflow-hidden no-wrap small">
                                 <li>毕业于法国Catherine Muller School ,曾服务过Dior/科颜氏/fresh</li>
                                 <li>2019年 获“美国花艺学院AFA”花艺师/花艺讲师资质</li>
                                 <li>2014年 至今担任多彩国际花艺学院讲师</li>
@@ -153,7 +151,7 @@
                         <div class="col">
                             <div class="card"><img class="rounded img-fluid card-img-top w-100 d-block p-4" src="assets/img/a43f540c07614e01a1287d03d15b4747.gif" style="padding-bottom: 0px;">
                                 <div class="card-body text-center p-2">
-                                    <p class="card-text">他的花艺风格融合着北欧和日本独特、感性设计，与一般花艺有着极大差异。从花卉植物品种到陈列摆设，以及色调掌控、空间材质等都跳脱了亚洲思维。所以尽管他是纯正的丹麦人，却被誉为花艺混血小王子<br></p>
+                                    <p class="card-text small">他的花艺风格融合着北欧和日本独特、感性设计，与一般花艺有着极大差异。从花卉植物品种到陈列摆设，以及色调掌控、空间材质等都跳脱了亚洲思维。所以尽管他是纯正的丹麦人，却被誉为花艺混血小王子<br></p>
                                 </div>
                             </div>
                         </div>
