--- a/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
@@ -37,9 +37,9 @@
             <hr class="star-dark mb-5">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="/"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cabin.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="Subscription.html"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cabin.png" alt="Card Image"></a>
                         <div class="card-body">
-                            <h6><a href="/">会员订阅/增值服务</a></h6>
+                            <h6><a href="Subscription.html">会员订阅/增值服务</a></h6>
                             <p class="text-muted card-text">会员订阅/增值服务</p>
                         </div>
                     </div>
