--- a/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
+++ b/Source/Tailwind.Traders.Web/ClientApp/public/meijia.html
@@ -17,7 +17,7 @@
                 aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">产品和服务</a></li>
+                    <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#">产品和服务</a></li>
                     <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">关于我们</a></li>
                     <li class="nav-item mx-0 mx-lg-1" role="presentation"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">联系我们</a></li>
                 </ul>
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <header class="bg-primary text-white text-center masthead" style="padding-top: 120px;">
-        <div class="container p-2"><img class="img-fluid mx-auto mb-5 col col-xl-4" src="assets/img/portfolio/cabin.png">
+        <div class="container p-2"><img class="img-fluid mx-auto mb-5 col col-xl-4" src="assets/img/微信图片_20191103141555.jpg">
             <h1 class="small">要美家，上美家</h1>
             <hr class="star-light">
             <h2 class="font-weight-light mb-0">个性化家居花饰服务提供商</h2>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="CustomService.html"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/cake.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="CustomService.html"><img class="card-img-top scale-on-hover" src="assets/img/微信图片_20191103133339.png" alt="Card Image"></a>
                         <div class="card-body">
                             <h6><a href="CustomService.html">个性化家具花饰定制服务</a></h6>
                             <p class="text-muted card-text">个性化家具花饰定制服务</p>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="card border-0"><a href="/list/homeappliances"><img class="card-img-top scale-on-hover" src="assets/img/portfolio/circus.png" alt="Card Image"></a>
+                    <div class="card border-0"><a href="/list/homeappliances"><img class="card-img-top scale-on-hover" src="assets/img/af17f060745546689705faf8acbc9e89.jpeg" alt="Card Image"></a>
                         <div class="card-body">
                             <h6><a href="/list/homeappliances">花饰/周边商城</a></h6>
                             <p class="text-muted card-text">花饰/周边商城</p>
@@ -75,7 +75,7 @@
                     <p class="lead text-center">花饰/周边商城</p>
                 </div>
             </div>
-            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" href="#"><i class="fa fa-check mr-2"></i><span>我要订阅VIP</span></a></div>
+            <div class="text-center mt-4"><a class="btn btn-outline-light btn-xl" role="button" href="#"><i class="fa fa-check mr-2"></i><span>我加入订阅</span></a></div>
         </div>
     </section>
     <section id="contact">
